objects/SGCOM3__SG_UserAdmin__c.object
<CustomObject>
    <description>This custom object is used to store salesgenie userId and password.</description>
    <fields>
        <fullName>SGCOM3__SG_Password__c</fullName>
        <label>SG Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGCOM3__SG_UserId__c</fullName>
        <label>SG User Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SGCOM3__UserId__c</fullName>
        <description>Salesforce User Id</description>
        <label>User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SG User Admin</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SG User Admins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>